--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/food_crm
+    url: jdbc:mysql://localhost:3306/rental_management
     username: root
     password:
 
